# llm-things

src/claude-agent-sdk-example/: creative-agent.txt  lead-agent.txt  main.py  poem-director.txt  pyproject.toml
src/claude-agent-sdk-example/files/poems/: moon_poem.txt
src/claude-agent-sdk-example/files/verses/: verse_1.txt  verse_2.txt  verse_3.txt
src/heavychat/: README.md  heavychat.py  heavychat_aiometer.py  requirements.txt
src/langgraph-test/: .gitignore  1-basic-langgraph.py  2-embed.py  3-rag.py  README.md  pyproject.toml
src/langgraph-test/utils/: rag_utils.py
src/openai-examples/: main.py  pyproject.toml
src/proxyai/: .gitignore  CLAUDE.md  Program.cs  README.md  docker-compose.yaml  litellm_config.yaml  proxyai.csproj  proxyai.http  sample1.json  sample2.json
src/proxyai/Middleware/: RecordEverythingMiddleware.cs
src/proxyai/Properties/: launchSettings.json
src/proxyai/Transforms/: FakeChatCompletionRequestTransform.cs
